// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-default-language should get the default language 1`] = `
{
  "content": [
    {
      "text": "{"name":"English (United States)","isoCode":"en-US"}",
      "type": "text",
    },
  ],
}
`;

exports[`get-default-language should handle error from client 1`] = `
{
  "content": [
    {
      "text": "Error using get-default-language:
{
  "message": "Simulated error"
}",
      "type": "text",
    },
  ],
}
`;
